Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjBoolObjField.quorum
class Main
    Text v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Text
        Boolean var
        var:SetValue(true)
        return var
    end
end